# Flux-mcp-nl

./: .gitignore  memo.md  pyproject.toml  scheduler_mcp_sched_fix_summary.md
examples/: call_analysis_tool.py  call_convert_tool.py  call_feasibility_tool.py  call_gemini_submit_tool.py  call_logs_tool.py  call_nl_tool.py  call_resouce_tool.py  call_status_tool.py  call_submit_tool.py  cpu_parallel.py  cpu_parallel_long.py  cpu_parallel_usage.md  cpu_single_short.py  run_cancel_from_terminal.py  run_gemini_analysis_to_file.py  run_gemini_convert_to_file.py  run_gemini_jobspec_from_terminal.py  run_gemini_parse_from_terminal.py  run_gemini_parse_to_file.py  run_gemini_sched_allocate_from_terminal.py  run_gemini_sched_allocate_reserve_from_terminal.py  run_gemini_sched_feasibility_from_terminal.py  run_gemini_submit_from_terminal.py  run_gemini_submit_to_file.py  run_gemini_transform_from_terminal.py  run_gemini_validate_from_terminal.py  run_logs_to_file.py  run_resource_to_file.py  run_sched_qmanager_stats.py  run_sched_release_from_terminal.py  run_sched_resource_find_from_terminal.py  run_sched_resource_info_from_terminal.py  run_sched_resource_status.py  run_status_from_terminal.py  run_status_to_file.py  run_validate_bad_script_from_terminal.py
scheduler_mcp/: registry.py
tests/: test_analysis.py  test_cancel.py  test_convert.py  test_feasibility.py  test_gemini_nl.py  test_logs.py  test_nl.py  test_resource.py  test_sched_allocation.py  test_sched_feasibility.py  test_sched_helpers.py  test_sched_info.py  test_sched_release.py  test_status.py  test_submit.py  (+1 more)
(+39 files in other folders)
